# qukkos

./: CONTRIBUTING.md  LICENSE  README.md
docs/doxygen/: Doxyfile.cmake  README.md
docs/source/: conf.py  index.rst  install.rst
docs/uml/: syntax_handler.plantuml
plugin/XACC/: Kokkos_XACC.cpp  Kokkos_XACC.hpp  Kokkos_XACCSpace.cpp  Kokkos_XACCSpace.hpp  Kokkos_XACC_DeepCopy.hpp  Kokkos_XACC_FunctorAdapter.hpp  Kokkos_XACC_Instance.cpp  Kokkos_XACC_Instance.hpp  Kokkos_XACC_MDRangePolicy.hpp  Kokkos_XACC_Macros.hpp  Kokkos_XACC_ParallelFor_MDRange.hpp  Kokkos_XACC_ParallelFor_Range.hpp  Kokkos_XACC_ParallelFor_Team.hpp  Kokkos_XACC_ParallelReduce_MDRange.hpp  Kokkos_XACC_ParallelReduce_Range.hpp  Kokkos_XACC_ParallelReduce_Team.hpp  Kokkos_XACC_ParallelScan_Range.hpp  Kokkos_XACC_ScheduleType.hpp  Kokkos_XACC_SharedAllocationRecord.cpp  Kokkos_XACC_SharedAllocationRecord.hpp  Kokkos_XACC_Team.hpp  Kokkos_XACC_Traits.hpp
src/: CMakeLists.txt
src/benchmarks/csp/: README.md  circuit_opt_benchmark.cpp  driver.py
src/cmake/: qcor_config.hpp.in
src/docker/dev/: README.md  docker-compose.yml  settings.json
src/docker/isc-demo/: Dockerfile
src/docker/qsharp/: Dockerfile
src/examples/: CMakeLists.txt  README.md
src/examples/adder/: add_3_5.cpp
src/examples/adjoint_test/: show_adjoint.cpp
src/examples/argparse/: simple-explicit-parser.cpp  simple-implicit-parser.cpp
src/examples/arithmetic/: integer_add.cpp  simple.cpp
src/examples/bell/: bell_control.cpp  multiple_kernels_Bell_test.cpp
src/examples/bernstein_vazirani/: bernstein_vazirani.cpp
src/examples/ctrl-gates/: hadamard_test.cpp  simple_hadamard_test.cpp
src/examples/deuteron/: deuteron_exp_inst.cpp  deuteron_task_initiate.cpp
src/examples/error_mitigation/: simple_mitiq.cpp
src/examples/ftqc_qrt/: bit-flip-code.cpp  deuteron.cpp  error_correcting_code.cpp  five_qubit_qec_code.cpp  grover.cpp  integer_add.cpp  qalloc_ftqc.cpp  repeat-until-success.cpp  run-with-shots.cpp  simple-demo.cpp  steane_qec_code.cpp
src/examples/grover/: grover.cpp
src/examples/hubbard/: hubbard_dimer.cpp
src/examples/mirror_validation/: deuteron_validation.cpp  validate_execution.cpp  validate_execution.py
src/examples/placement/: simplePlacement.cpp
src/examples/qjit/: bell_jit.cpp
src/examples/qpe/: qpe_callable_oracle.cpp  qpe_example_qrt.cpp  qpe_ham_op.cpp
src/examples/qpu_lambda/: d2_with_htest.cpp  deuteron.cpp  deuteron_vqe.cpp  deuteron_vqe_obj_func.cpp  grover_lambda_oracle.cpp  lambda_test.cpp  lambda_test_bell.cpp  lambda_with_compute_action.cpp
src/examples/qsharp/: CMakeLists.txt
src/examples/quasimo/: AdaptVqeWorkflow.cpp  IterativeQpeVqe.cpp  QaoaWorkflow.cpp  QiteWorkflow.cpp  TdWorkflowHeisenbergModel.cpp  TrotterTdWorkflow.cpp  VerifiedQuantumPhaseEstimation.cpp  VqeWithAnsatzCircuit.cpp  qite_3q_tfim.cpp  qite_deuteron_qsearch.cpp
src/examples/simple/: gradients_optimization.cpp  mixed_language.cpp  multiple_kernels.cpp  simple-demo.cpp  simple-objective-function.cpp
src/handlers/: CMakeLists.txt  qcor_syntax_handler.cpp  qcor_syntax_handler.hpp
src/handlers/token_collector/: CMakeLists.txt  token_collector.hpp  token_collector_util.cpp  token_collector_util.hpp
src/lib/: CMakeLists.txt
src/lib/impl/: bit_flip_code.hpp  common.hpp  five_qubit_code.hpp  hadamard_test.hpp  integer_arithmetic.hpp  qec_factory.hpp  qec_utils.hpp  qft.hpp  quantum_phase_estimation.hpp  seven_qubit_steane_code.hpp  vqe.hpp
src/lib/mirror_rb/: CMakeLists.txt  clifford_gate_utils.cpp  clifford_gate_utils.hpp  manifest.json  mirror_circuit_rb.cpp  mirror_circuit_rb.hpp
src/lib/quasimo/base/: CMakeLists.txt  kernel_evaluator.hpp  qcor_qsim.cpp  qcor_qsim.hpp
src/lib/quasimo/impls/cost_evaluator/tests/: CMakeLists.txt  TimeSeriesQpeNoiseTester.cpp  TimeSeriesQpeTester.cpp
src/mlir/: CMakeLists.txt  README.md  qcor_mlir_api.cpp  qcor_mlir_api.hpp
src/mlir/parsers/: mlir_generator.hpp
src/mlir/qir_qrt/: CMakeLists.txt  qir-qis-base.cpp  qir-qis-ms-compat.cpp  qir-qrt.cpp  qir-qrt.hpp  qir-range-util.cpp  qir-types-utils.hpp  qir-types.cpp  qir-types.hpp  (+2 more)
src/mlir/tools/: CMakeLists.txt  qcor-mlir-helper.hpp  qcor-mlir-tool.cpp
src/python/: CMakeLists.txt  py-qcor.cpp  py_costFunctionEvaluator.hpp  py_qsimWorkflow.hpp  qcor.in.py
src/runtime/: CMakeLists.txt  qcor.hpp  qcor_lang_ext.hpp  qcor_version.in
src/runtime/execution/: taskInitiate.cpp  taskInitiate.hpp
src/runtime/jit/: CMakeLists.txt  qcor_jit.hpp  qcor_jit.in.cpp
src/runtime/kernel/: quantum_kernel.cpp  quantum_kernel.hpp
src/runtime/objectives/: gradient_function.cpp  gradient_function.hpp  objective_function.cpp  objective_function.hpp
src/runtime/objectives/gradients/FiniteDifference/: CMakeLists.txt  FiniteDifferenceGradients.cpp  manifest.json
src/runtime/objectives/rbm-chemistry/: CMakeLists.txt  manifest.json  rbm-chemistry.cpp
src/runtime/objectives/vqe/: CMakeLists.txt  manifest.json  vqe.cpp
src/runtime/observable/: qcor_observable.cpp  qcor_observable.hpp
src/runtime/observable/tests/: CMakeLists.txt  OperatorTester.cpp
src/runtime/optimizer/: qcor_optimizer.cpp  qcor_optimizer.hpp
src/runtime/optimizer/tests/: CMakeLists.txt  OptimizerTester.cpp
src/runtime/qrt/: pass_manager.cpp  pass_manager.hpp  qrt.cpp  qrt.hpp  qrt_mapper.hpp
src/runtime/qrt/impls/ftqc/: CMakeLists.txt  ftqc_qrt.cpp  manifest.json
src/runtime/qrt/impls/ftqc/tests/: CMakeLists.txt  FtqcQrtTester.cpp
src/runtime/qrt/impls/ftqc/tracer/: ResourcesTracerAccelerator.cpp  ResourcesTracerAccelerator.hpp
src/runtime/qrt/impls/nisq/: CMakeLists.txt  manifest.json  nisq_qrt.cpp
src/runtime/qrt/impls/nisq/tests/: CMakeLists.txt  NisqQrtTester.cpp
src/runtime/qrt/internal_compiler/: qalloc.hpp  xacc_internal_compiler.cpp
src/runtime/qrt/ir/: qcor_ir.cpp  qcor_ir.hpp
src/runtime/tests/: CMakeLists.txt  QCORTester.cpp
src/runtime/utils/: qcor_pimpl.hpp  qcor_pimpl_impl.hpp  qcor_utils.cpp  qcor_utils.hpp
src/scripts/: get_git_version.sh
src/tools/driver/: CMakeLists.txt  qcor.in
src/tpls/: CMakeLists.txt
(+355 files in other folders)
